[package]
edition = "2021"
name    = "esp-serial-bridge"
version = "0.1.0"

[lib]
name = "esb"
path = "src/lib.rs"

[[bin]]
name = "esp-serial-bridge"
path = "./src/bin/async_main.rs"
test = false
doctest = false
bench = false

[features]
default = []
dev-uart = []

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32c6",
  "log",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time     = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0", features = ["esp32c6"] }
static_cell      = { version = "2.1.0", features = ["nightly"] }
embassy-sync = "0.6.2"
edge-http = "0.5.0"
edge-nal-embassy = "0.5.0"
edge-nal = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = true
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

[profile.release.package.esp-wifi]
opt-level = 3
